# SolOSDK

./: .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.actor/: input_schema.json
scripts/: reset_junction.py  sync.py  write_local_input.sh
src/sol/: __init__.py  exceptions.py  http.py
src/sol/auth/: __init__.py  kv.py  oauth.py  spotify.py
src/sol/config/: __init__.py  broadcasting.py  sol_os.py  spotify.py
src/sol/notion/: __init__.py  core.py  databases.py  snapshots.py
src/sol/runs/: __init__.py  log.py
src/sol/utils/: __init__.py
tests/: __init__.py  test_smoke.py
